--- a/src/responsive.css
+++ b/src/responsive.css
@@ -43,7 +43,7 @@
   .footer-container {
     flex-direction: column;
     height: auto;
-    padding: 20px;
+    padding: 0 20px;
   }
 
   .footer-container .socials,
@@ -54,7 +54,7 @@
     height: auto;
     text-align: center;
     padding-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 0;
   }
 
   .footer-container .socials .social-icons {
@@ -70,18 +70,16 @@
   }
 
   /* HOME PAGE */
-  .home-header {
+  .home-header, .contact-header {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 80vh;
-    background-image: url('/public/images/home.jpeg');
     background-position: 30%;
-    background-size: cover;
   }
 
-  .home-header .home-left {
+  .home-header .home-left, .contact-header .contact-left{
     width: 70%;
     height: 40%;
     border: 8px solid rgba(255, 255, 255, 0.5);
@@ -89,16 +87,16 @@
     border-right-color: transparent;
   }
 
-  .home-header .home-right {
+  .home-header .home-right, .contact-header .contact-right {
     width: 35%;
     height: 20%;
     margin-left: -110px;
     padding: 20px;
   }
 
-  .home-header .home-right h1 {
+  .home-header .home-right h1, .contact-header .contact-right h1 {
     font-size: 18px;
-    padding-top: 40px;
+    padding-top: 35px;
   }
 
   .home-content1 {
@@ -183,7 +181,7 @@
   }
 
   .about-header .about-right h1 {
-    font-size: 18px;
+    font-size: 15px;
   }
 
   .about-principal h1 {
@@ -198,12 +196,12 @@
 
   .principal-container {
     display: block;
-    height: 90vh;
+    height: 100vh;
   }
 
   .about-principal .principal-left {
     width: 60%;
-    height: 30%;
+    height: 27%;
     margin: 10px 80px;
   }
 
@@ -220,29 +218,135 @@
   }
 
   .about-principal .principal-right h2 {
-    margin-left: -30px;
+    margin-left: 30px;
     padding-top: 10px;
-    padding-bottom: 20px;
     text-align: center;
   }
 
-  .about-principal .principal-right button {
-    margin-left: 0px;
+  .experience-container {
+    display: none;
   }
 
-  .experience-container,
   .deputy-container {
-    flex-direction: column;
+    display: none;
+  }
+
+  /* CURRICULUMN PAGE */
+  .curriculumn-header {
+    display: flex;
+    width: 100%;
+    height: 80vh;
+    margin: 0;
+    padding: 0;
+    background-position: 30%;
+  }
+
+  .curriculumn-header .curriculumn-left {
+    width: 70%;
+    height: 40%;
+  }
+
+  .curriculumn-header .curriculumn-right {
+    width: 35%;
+    height: 20%;
+    padding: 20px;
+    margin-left: -110px;
+  }
+
+  .curriculumn-header .curriculumn-right h1 {
+    font-size: 16px;
+    padding-top: 35px;
+    padding-left: 5px;
+  }
+
+  .junior-container {
+    display: block;
+    width: 100%;
     height: auto;
   }
 
-  .experience-left,
-  .experience-right,
-  .deputy-container .deputy-left,
-  .deputy-container .deputy-right {
+  .junior-container .junior-left {
     width: 100%;
-    height: 50%;
-    padding: 0 20px;
-    margin: 20px 0;
+    padding: 0 40px;
+    margin: 0;
+  }
+
+  .junior-container .junior-left h2 {
+    text-align: left;
+    padding-top: 20px;
+    font-size: 25px;
+  }
+
+  .junior-container .junior-left p {
+    text-align: justify;
+  }
+
+  .junior-container .junior-right {
+    display: none;
+  }
+
+  .senior-container {
+    display: block;
+    width: 100%;
+    height: auto;
+    margin-top: 20px;
+  }
+
+  .senior-container .senior-left {
+    display: none;
+  }
+
+  .senior-container .senior-right {
+    width: 100%;
+    padding: 20px 40px;
+    margin: 0;
+  }
+
+  .senior-container .senior-right h2 {
+    text-align: left;
+    font-size: 20px;
+  }
+
+  .senior-container .senior-right p {
+    text-align: justify;
+  }
+
+  .typical-day .h1{
+    height: 10vh;
+    padding-top: 2px;
+  }
+
+  .grid-container {
+    display: block;
+    height: 20%;
+  }
+
+  .grid-item-1, .grid-item-4, .grid-item-5, .grid-item-8 {
+    display: none;
+  }
+
+
+  /* CONTACT PAGE */
+  .form-div .p {
+    padding: 20px 30px;
+    font-size: 15px;
+  }
+
+  .form {
+    display: block;
+    padding: 0;
+  }
+
+  .form .form-left {
+    display: none;
+  }
+
+  .form .form-right {
+    width: 100%;
+    padding: 0 35px;
+  }
+
+  .map-area {
+    padding: 0;
   }
 }
