--- a/src/App.css
+++ b/src/App.css
@@ -661,8 +661,7 @@ nav {
   width: 30%;
   height: 80%;
   border-radius: 50%;
-  margin: 30px;
-  margin-left: 70px;
+  margin: 40px 100px;
   background-image: url(/public/images/millicent.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -672,7 +671,7 @@ nav {
 .millicent-container .millicent-right {
   width: 50%;
   height: 100%;
-  padding: 50px;
+  padding: 100px 0px;
 }
 
 .millicent-container .millicent-right h1 {
