--- a/src/responsive.css
+++ b/src/responsive.css
@@ -57,6 +57,10 @@
     margin-bottom: 0;
   }
 
+  .contact div {
+    padding-left: 30px;
+  }
+
   .footer-container .socials .social-icons {
     margin-left: 0;
     margin-top: 0;
@@ -70,7 +74,7 @@
   }
 
   /* HOME PAGE */
-  .home-header, .contact-header {
+  .home-header, .contact-header, .careers-header {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -79,7 +83,7 @@
     background-position: 30%;
   }
 
-  .home-header .home-left, .contact-header .contact-left{
+  .home-header .home-left, .contact-header .contact-left, .careers-header .careers-left{
     width: 70%;
     height: 40%;
     border: 8px solid rgba(255, 255, 255, 0.5);
@@ -87,14 +91,14 @@
     border-right-color: transparent;
   }
 
-  .home-header .home-right, .contact-header .contact-right {
+  .home-header .home-right, .contact-header .contact-right, .careers-header .careers-right {
     width: 35%;
     height: 20%;
     margin-left: -110px;
     padding: 20px;
   }
 
-  .home-header .home-right h1, .contact-header .contact-right h1 {
+  .home-header .home-right h1, .contact-header .contact-right h1, .careers-header .careers-right h1 {
     font-size: 18px;
     padding-top: 35px;
   }
@@ -348,5 +352,22 @@
 
   .map-area {
     padding: 0;
+  }
+
+  /* CAREER PAGE  */
+  .millicent-container {
+    display: none;
+  }
+
+  .others-container {
+    display: none;
+  }
+
+  .opportunities-container {
+    padding: 0px;
+  }
+
+  .opportunities-container p {
+    padding: 30px 30px;
   }
 }
