--- a/src/App.css
+++ b/src/App.css
@@ -103,7 +103,7 @@ nav {
   align-items: center;
   width: 100%;
   height: 95vh;
-  background-image: url("/images/home.jpeg");
+  background-image: url('/public/images/home.jpeg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -153,7 +153,7 @@ nav {
   width: 35%;
   height: 80%;
   border-radius: 50%;
-  background-image: url('/images/home_welcome.jpeg');
+  background-image: url('/public/images/home_welcome.jpeg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -264,7 +264,7 @@ nav {
   align-items: center;
   width: 100%;
   height: 95vh;
-  background-image: url('/images/about.jpeg');
+  background-image: url('/public/images/about.jpeg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -304,7 +304,7 @@ nav {
   height: 80%;
   margin: 25px 150px;
   border-radius: 50%;
-  background-image: url('/images/principal.jpeg');
+  background-image: url('/public/images/principal.jpeg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -387,7 +387,7 @@ nav {
 .experience-right {
   width: 50%;
   height: 100%;
-  background-image: url('/images/school.jpeg');
+  background-image: url('/public/images/school.jpeg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -404,7 +404,7 @@ nav {
 .deputy-container .deputy-left {
   width: 50%;
   height: 100%;
-  background-image: url('/images/deputy.jpeg');
+  background-image: url('/public/images/deputy.jpeg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -442,7 +442,7 @@ nav {
   align-items: center;
   width: 100%;
   height: 95vh;
-  background-image: url('/images/curriculumn.jpeg');
+  background-image: url('/public/images/curriculumn.jpeg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -487,7 +487,7 @@ nav {
   border-right-color: #ffff;
   border-top-color: #e06287;
   border-bottom-color: #0095c8;
-  background-image: url('/images/junior.jpeg');
+  background-image: url('/public/images/junior.jpeg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -509,7 +509,7 @@ nav {
   border-right-color: #feb404;
   border-top-color: #0095c8;
   border-bottom-color: #e06287;
-  background-image: url('/images/senior.jpeg');
+  background-image: url('/public/images/senior.jpeg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -586,7 +586,7 @@ nav {
 
 .grid-item-1 {
   grid-area: 5 / 1 / 9 / 3;
-  background-image: url('/images/image5.jpg');
+  background-image: url('/public/images/image5.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -599,14 +599,14 @@ nav {
 }
 .grid-item-4 {
   grid-area: 1 / 3 / 5 / 5;
-  background-image: url('/images/home1.jpg');
+  background-image: url('/public/images/home1.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 .grid-item-5 {
   grid-area: 5 / 5 / 9 / 7;
-  background-image: url('/images/image2.jpg');
+  background-image: url('/public/images/image2.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -619,7 +619,7 @@ nav {
 }
 .grid-item-8 {
   grid-area: 1 / 7 / 5 / 9;
-  background-image: url('/images/image3.jpg');
+  background-image: url('/public/images/image3.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -642,7 +642,7 @@ nav {
   align-items: center;
   width: 100%;
   height: 95vh;
-  background-image: url('/images/careers.jpeg');
+  background-image: url('/public/images/careers.jpeg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -667,7 +667,7 @@ nav {
   height: 80%;
   border-radius: 50%;
   margin: 40px 100px;
-  background-image: url('/images/millicent.jpg');
+  background-image: url('/public/images/millicent.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -704,7 +704,7 @@ nav {
   display: flex;
   width: 50%;
   height: 100%;
-  background-image: url('/images/Hanna.jpg');
+  background-image: url('/public/images/Hanna.jpg');
   background-repeat: no-repeat;
   background-position: left;
   background-size: contain;
@@ -725,7 +725,7 @@ nav {
   display: flex;
   width: 50%;
   height: 100%;
-  background-image: url('/images/Tuuli.jpg');
+  background-image: url('/public/images/Tuuli.jpg');
   background-repeat: no-repeat;
   background-position: left;
   background-size: contain;
@@ -857,7 +857,7 @@ nav {
   align-items: center;
   width: 100%;
   height: 95vh;
-  background-image: url('/images/contact.jpeg');
+  background-image: url('/public/images/contact.jpeg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -1119,7 +1119,7 @@ nav {
   height: 90%;
   margin-left: -240px;
   border-radius: 50%;
-  background-image: url("/images/principal.jpeg");
+  background-image: url("/public/images/principal.jpeg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -1130,7 +1130,7 @@ nav {
   height: 90%;
   margin-left: -240px;
   border-radius: 50%;
-  background-image: url("/images/Hanna.jpg");
+  background-image: url("/public/images/Hanna.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -1141,7 +1141,7 @@ nav {
   height: 90%;
   margin-left: -240px;
   border-radius: 50%;
-  background-image: url("/images/Tuuli.jpg");
+  background-image: url("/public/images/Tuuli.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -1237,7 +1237,7 @@ nav {
 .vacancy-image div {
   width: 90%;
   height: 100%;
-  background-image: url("/images/vacancy.png");
+  background-image: url("/public/images/vacancy.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
